fixed creating customer page is not showing problem.References issue #43. Created a new page called Signin

--- a/sale/public/style.css
+++ b/sale/public/style.css
@@ -30,6 +30,7 @@ fieldset{
 
 ul li{
 	list-style-type:none;
+	margin-bottom:5px;
 }
 
 label{
@@ -62,7 +63,7 @@ margin-left:10px;
 width:100%;
 }
 
-#createAccount{
+.createAccount{
 margin-left:50px;
 width:150px;
 
